fixed bundle config

--- a/databricks.yml
+++ b/databricks.yml
@@ -2,13 +2,14 @@ bundle:
   name: pockit_bundle
 
 resources:
-  app:
-    name: 'pockit'
-    description: "The user interface to the Pockit personal finance tracker app."
-    source_code_path: ./app
+  apps:
+    pockit_app:
+      name: 'pockit'
+      description: "The user interface to the Pockit personal finance tracker app."
+      source_code_path: ./app
 
-    resources:
-      - name: 'sql-warehouse'
-        sql_warehouse:
-          id: "93bd355ad01cb99a"
-          permission: 'CAN_RUN'
+      resources:
+        - name: 'sql-warehouse'
+          sql_warehouse:
+            id: "93bd355ad01cb99a"
+            permission: 'CAN_USE'
